--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -124,9 +124,13 @@
 								</div>
 
 								<div class="form-group">
-									<label for="imageURL">Upload your Photo</label> <input
-										type="text" class="form-control-file" id="imageURL"
-										name="imageURL" th:field="*{imageURL}">
+									<label for="image">Upload your photo</label>
+									<div class="col-sm-10">
+										<input type="file" class="form-control-file" id="image"
+											name="image" th:field="*{image}">
+									</div>
+									<span th:if="${#fields.hasErrors('*{image}')}"
+										th:errors="*{image}">Image error</span>
 								</div>
 
 
