--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -65,13 +65,6 @@ body {
   padding-left: 5vw;
 }
 
-/*footer {
-  padding: 1em;
-  width: 100%;
-  top: 100%;
-  position: absolute;
-}*/
-
 .bg-light {
   background-color: peachpuff  !important;
   padding: 0;
@@ -82,6 +75,9 @@ body {
 
 }
 
+.copyright {
+	margin-bottom: 1rem;
+}
 
 .card {
   margin: 2rem;
@@ -92,6 +88,7 @@ body {
   margin-left: 2rem;
 }
 
+/* Settings für Buttons*/
 
 .btn-danger{
 	margin-top: 2rem;
@@ -100,6 +97,10 @@ body {
 .btn-block {
     display: block;
     width: 100%;
+}
+
+.backbutton {
+	margin-top: 2rem;
 }
 
 .edit{
@@ -113,34 +114,9 @@ ul {
   padding: 0;
 }
 
-.backbutton {
-	margin-top: 2rem;
-}
-
-/* Text in card: View 
-.card-body {
-  margin-left: 2rem;
-  font-size: 24px;
-}*/
-
-
-/*.index{
-	felx-direction: colum;
-}*/
-
-
-
 .card-title {
 	font-size: 36px;
 }
-
-
-/*
-.card {
-	min-width: 50%;
-}
-
-*/
 
 .flex-container{
 	display: block;
@@ -233,7 +209,7 @@ main.index {
 
 .p-index{
 	padding-bottom: 2rem;
-	font-size: 1.5rem;
+	font-size: 1rem;
 	font-weight: 490;
 }
 
