--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+
 	<!-- Fragment: Header -->
 	<header th:fragment="top">
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -44,22 +45,11 @@
 				</ul>
 			</div>
 
-
-
-			<!-- Start: LogIn / LogOut  ============================================================== -->
-
 			<ul class="navbar navbar-expand-md navbar-light bg-light">
-
-
-				<li class="nav-item">
-					<!-- Admin: a) Show if admin is logged-in / otherwise show nothing ===================== -->
-
-					<a class="nav-link" sec:authorize="!isAuthenticated()"></a> <a
+				<li class="nav-item"><a class="nav-link"
+					sec:authorize="!isAuthenticated()"></a> <a
 					class="btn-outline-secondary btn-sm" th:href="@{/admin}"
-					sec:authorize="hasRole('ROLE_ADMIN')">Admin</a>
-
-				</li>
-
+					sec:authorize="hasRole('ROLE_ADMIN')">Admin</a></li>
 
 				<li class="nav-item"><a class="btn-outline-secondary btn-sm"
 					th:href="@{/login}" sec:authorize="!isAuthenticated()">Login /
@@ -67,38 +57,42 @@
 					th:href="@{/logout}" sec:authorize="isAuthenticated()"><span
 						sec:authentication="name"></span> </a></li>
 
-				<!--<li><pic> <a th:href="@{'/user/profile'}"> <img
+				<li><pic> <a th:href="@{'/user/profile'}"> <img
 						class="avatar" sec:authorize="hasRole('ROLE_USER')"
-						th:src="@{'/avatar/image'}" alt="Avatar" style="width: 80px"></a>
-					</pic></li>-->
-
-				<!-- 				<li><pic> <a th:href="@{'/user/profile'}"> -->
-				<!-- 						<img sec:authorize="hasRole('ROLE_USER')" -->
-				<!-- 						th:unless="@{'/avatar/image'}" src="/images/avatar.png"> <img -->
-				<!-- 						class="avatar" sec:authorize="hasRole('ROLE_USER')" -->
-				<!-- 						th:if="@{'/avatar/image'}" th:src="@{'/avatar/image'}" -->
-				<!-- 						alt="Avatar"> -->
-				<!-- 					</a> </pic></li> -->
-
-				<li><pic> <a th:href="@{'/user/profile'}"> <img class="avatar"
-						 sec:authorize="hasRole('ROLE_USER')"
 						th:src="@{'/avatar/image'} != null ? @{'/avatar/image'} : '/images/avatar.png'"
 						alt=" ">
 					</a> </pic></li>
 			</ul>
-			<!-- Ende: LogIn / LogOut  ============================================================== -->
 		</nav>
 	</header>
 
 
 	<!-- Fragment: Footer -->
-	<footer th:fragment="bottom"
-		class="navbar bottom navbar-light bg-light">
-		<a class="navbar-brand" href="/">SkillHub</a> <a class="navbar-brand"
-			href="#">Impressum</a> <a class="navbar-brand" href="#">Privacy</a> <a
-			class="navbar-brand" href="#">AGBs</a> <a class="navbar-brand"
-			href="#">Contact Us</a>
-		<p class="navbar-brand copyright">Copyright &copy; 2020</p>
+	<footer th:fragment="bottom">
+		<nav class="navbar navbar-expand-md navbar-light bg-light">
+			<a class="navbar-brand" href="/">SkillHub</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+
+					<li class="nav-item"><a class="nav-link" href="#">Impressum</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Privacy</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Contact
+							Us</a></li>
+
+				</ul>
+
+				<ul class="navbar navbar-expand-md navbar-light bg-light">
+					<li class="nav-item copyright"><a class="nav-link" href="#"></a>
+						<a class="btn-outline-secondary btn-sm">Copyright &copy; 2020</a></li>
+				</ul>
+
+			</div>
+		</nav>
 	</footer>
 
 </body>
