--- a/src/main/resources/templates/changePw.html
+++ b/src/main/resources/templates/changePw.html
@@ -25,7 +25,7 @@
 
 <body>
 
-	<header th:replace="fragments.html :: top ('')">Here goes the
+	<header th:replace="fragments.html :: top">Here goes the
 		header</header>
 
 	<main class="changePw_background">
