Farbe im Header geändert

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .bg-light {
-  background-color: peachpuff  !important;
+  background-color: orange !important;
   padding: 0;
   padding-left: 2rem;
   padding-right: 0.5rem;
