--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -77,21 +77,20 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+
 				<ul class="navbar-nav">
 
 					<li class="nav-item"><a class="nav-link" href="#">Impressum</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Privacy</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Contact
-							Us</a></li>
-
-				</ul>
-
-				<ul class="navbar navbar-expand-md navbar-light bg-light">
-					<li class="nav-item copyright"><a class="nav-link" href="#"></a>
-						<a class="btn-outline-secondary btn-sm">Copyright &copy; 2020</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
 				</ul>
 
 			</div>
+			<ul class="navbar navbar-expand-md navbar-light bg-light">
+				<li class="nav-item copyright"><a class="nav-link" href="#"></a>
+					<a class="btn-outline-secondary btn-sm">Copyright &copy; 2020</a></li>
+			</ul>
+
 		</nav>
 	</footer>
 
