--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -22,8 +22,7 @@
 	crossorigin="anonymous"></script>
 </head>
 
-<header th:replace="fragments.html :: top">Here
-	goes the header</header>
+<header th:replace="fragments.html :: top">Here goes the header</header>
 
 <body>
 
