Font awesome and head Fragment

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -22,7 +22,7 @@
   <!-- Fragment: Header -->
   <header th:fragment="top">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="/"><i class="fa fa-home fa-fw" aria-hidden="true"></i>SkillHub</a>
+      <a class="navbar-brand" href="/"><i class="fa fa-home fa-fw" aria-hidden="true"></i> SkillHub</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="btn-outline-secondary btn-sm" th:href="@{/login}" sec:authorize="!isAuthenticated()">Login /
+          <a class="btn-outline-secondary btn-sm" th:href="@{/login}" sec:authorize="!isAuthenticated()"><i class="fas fa-sign-in-alt"></i> Login /
             Register</a>
           <a class="btn btn-outline-secondary btn-sm" th:href="@{/logout}" sec:authorize="isAuthenticated()">
             <span sec:authentication="name"></span>
