--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
       <div class="flex-container container index-text">
         <div class="row no-gutters">
           <h1 class="h1-index">Welcome to SkillHub</h1>
-          <p class="p-index"><i class="fa fa-home fa-fw" aria-hidden="true"></i>SkillHub is a social platform for skill exchange. It serves as a service platform for
+          <p class="p-index"></i>SkillHub is a social platform for skill exchange. It serves as a service platform for
             individuals to trade their services and strengths, and in return, learn skills or get personal assistance
             from subject matter esperts thereby removing all barriers of peer to peer learning. Choose from a Range of
             Services to help you excel in life, and most importantly, experience the true joy of sharing! So let's koin
