--- a/src/main/resources/templates/user/view.html
+++ b/src/main/resources/templates/user/view.html
@@ -15,7 +15,10 @@
         <div class="row no-gutters">
 
           <div class="card w-75">
-            <div class="card-header">User Profile</div>
+            <div class="card-header">
+              <i class="fas fa-user"></i>
+              User Profile
+            </div>
             <div class="card-body">
               <blockquote class="blockquote mb-0">
 
@@ -58,17 +61,17 @@
                             </div>
                           </div>
 
-                          <!--<div class="row no-gutters">
-														<div class="col-4">
-															<p class="bold">Age:</p>
-														</div>
-														<div class="col-1">
-															<p></p>
-														</div>
-														<div class="col-6">
-															<p th:text="|${user.age}|"></p>
-														</div>
-													</div>-->
+                          <div class="row no-gutters">
+                            <div class="col-4">
+                              <p class="bold">Age:</p>
+                            </div>
+                            <div class="col-1">
+                              <p></p>
+                            </div>
+                            <div class="col-6">
+                              <p th:text="|${user.age}|"></p>
+                            </div>
+                          </div>
 
                           <div class="row no-gutters">
                             <div class="col-4">
@@ -115,7 +118,10 @@
                 </div>
               </blockquote>
 
-              <a href="javascript:javascript:history.go(-1)" class="btn btn-primary">Go Back</a>
+              <a href="javascript:javascript:history.go(-1)" class="btn btn-primary">
+                <i class="fas fa-arrow-left"></i>
+                Go Back
+              </a>
             </div>
 
           </div>
