--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -31,11 +31,11 @@
         <ul class="navbar-nav">
 
           <li class="nav-item">
-            <a class="nav-link" href="/skills">Find Skills</a>
+            <a class="nav-link" href="/skills"><i class="fas fa-address-book"></i> Find Skills</a>
           </li>
 
           <li class="nav-item" sec:authorize="isAuthenticated()">
-            <a class="nav-link" href="/user/profile">My Profile </a>
+            <a class="nav-link" href="/user/profile"> <i class="fas fa-user"></i> My Profile </a>
           </li>
 
         </ul>
