--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -5,22 +5,7 @@
 <head th:replace="fragments.html :: head"></head>
 
 <body>
-
-  <header>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="/">SkillHub</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-        </ul>
-      </div>
-    </nav>
-
-
-  </header>
+  <header th:replace="fragments.html :: top">Here goes the header</header>
 
   <main>
     <!--Jumbotron-->
