Fix broken link

--- a/src/main/resources/templates/user/deleted.html
+++ b/src/main/resources/templates/user/deleted.html
@@ -18,7 +18,7 @@
     <br>
     <br>
     <br>
-    <a href="/usersoverview" class="btn btn-secondary">Return to the list (For Martin: delete later)</a>
+    <a href="/admin" class="btn btn-secondary">Return to the list (For Martin: delete later)</a>
     <br>
     <br>
   </main>
